<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.turismocdmx.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.turismocdmx.ui.home.Teotihuacan"
        android:label="@string/home_second"
        tools:layout="@layout/activity_teotihuacan">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.turismocdmx.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.turismocdmx.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_loggin"
        android:name="com.example.turismocdmx.ui.Formulario.Formulario"
        android:label="@string/m_loggin"
        tools:layout="@layout/formulario_fragment" />

    <fragment
        android:id="@+id/nav_restaurant"
        android:name="com.example.turismocdmx.ui.Restaurantes.Restaurantes"
        android:label="@string/menu_restaurant"
        tools:layout="@layout/restaurantes_fragment" />

    <fragment
        android:id="@+id/nav_compras"
        android:name="com.example.turismocdmx.ui.Compras.Compras"
        android:label="@string/menu_compra"
        tools:layout="@layout/compras_fragment" />

    <fragment
        android:id="@+id/nav_internet"
        android:name="com.example.turismocdmx.ui.Internet.Internet"
        android:label="@string/m_internet"
        tools:layout="@layout/internet_fragment" />

</navigation>